Fixed scroll overflow issue

--- a/Outgoing/outgoing_style.css
+++ b/Outgoing/outgoing_style.css
@@ -249,8 +249,8 @@ figure {
   display: none;
 
   /* Grid rows shared between .continent-name and .country-list  */
-  grid-template-rows: 10% 90%;
-  grid-gap: 2vh 0;
+  grid-template-rows: auto auto;
+  grid-gap: 1vh 0;
 }
 
 .continent-name {
@@ -268,18 +268,23 @@ figure {
 
   /* Columns are added to the 4 row structure as number of countries increase, scrolls horizontally */
   display: grid;
-  grid-template-rows: 25% 25% 25% 25%;
-  grid-auto-columns: 50vw;
+  grid-template-rows: repeat(4, auto);
+  grid-gap: 0 1vw;
+  grid-auto-columns: 1fr;
+
   grid-auto-flow: column;
   overflow: scroll hidden;
+  padding-left: 1vw;
 }
 
 .country {
   position: relative;
-  width: 90%;
+
+  width: 19vw;
   height: 60%;
   margin: auto;
-  padding: 8px 12px;
+
+  /* padding: 8px 12px; */
 
   border-radius: 4px;
   background-color: white;
@@ -307,11 +312,6 @@ figure {
   border-radius: 4px 4px 0 0;
 }
 
-@media only screen and (min-width: 768px) {
-  .country-list {
-    grid-auto-columns: 20vw;
-  }
-}
 @media only screen and (max-width: 768px) {
   #map-section {
     display: block;
@@ -320,28 +320,23 @@ figure {
     width: 80%;
     margin: auto;
   }
+
   #info {
     margin-top: 2vh;
     width: 100%;
   }
 
   #continent-card {
-    grid-template-rows: 15% 85%;
     overflow-y: visible;
     min-height: 50vh;
   }
 
-  #country-list {
-    grid-auto-columns: 50vw;
-  }
-
   .country {
-    width: 60%;
+    width: 49vw;
     min-height: 5vh;
     font-size: 0.9em;
   }
 }
-
 .LC-list {
   position: absolute;
   left: 0;
